...
                    )
                }
                //finish()

                product = SearchResultProducts(
                    name = "ساپورت",
                    KBarCode = "64822109J-8010-F",
                    imageUrl = "https://www.banimode.com/jeanswest/image.php?token=tmv43w4as&code=64822109J-8010-F",
                    shoppingNumber = 1,
                    warehouseNumber = 0,
                    productCode = "64822109",
                    size = "F",
                    color = "8010",
...
