...
            sumOfManualRefill += it.requestedNum
        }
    }

    private fun getSimilarProducts() {

        if (productCode == "کد محصول") {
            CoroutineScope(Dispatchers.Default).launch {
                state.showSnackbar(
                    "لطفا کد محصول را وارد کنید.",
                    null,
                    SnackbarDuration.Long
                )
...
                                .size(24.dp)
                                .align(Center)
                        )
                    }
                },
                label = {
                    Text(text = "شارژ")
                }
            )

            BottomNavigationItem(
                selected = isSubmitSelected,
                onClick = {
...
                        )
                    }
                }
            } else {
                LazyColumn(modifier = Modifier.padding(top = 2.dp, bottom = 156.dp)) {

                    items(uiList.size) { i ->
                        LazyColumnItem(i)
                    }
                }
            }
        }

...
